feat: implement role-based tabs and leave management UI
- Add tab navigation with role-based access: user, manager, admin
- Create LeaveRequestList and EmployeeLeaveConsole with employee dropdown
- Implement VacationBalanceCard with dynamic greeting and email-based titles
- Add status legend with brand colors below leave tables
- Style tables with distinct blue (personal) and orange (manager) palettes
- Add smooth fade animations and delayed content rendering to prevent UI jitter
- Add rounded containers with hover/focus shadows for main panels
- Customize dropdown chevron and style without Tailwind
- Conditionally show cancel button only in personal view
- Add async action spinners and "Onaylanıyor..." feedback overlays in manager panel
- Fix spinner CSS for perfect circle and overlay spinner behind text to avoid table resizing
- Refactor LeaveRequestList hooks to fix invalid hook call and order issues
- Add mobile status tooltips and improve accessibility/focus styles
- Implement form validation updates; remove unnecessary leave type required check, enforce location required
- Add Supabase Edge Functions for approve, reject, cancel, deduct, reverse, create leave with email notifications
- Secure edge functions with role and status validations
- Log cancellation and other key actions in audit logs table
- Setup WIP branch workflow and Vercel deployment rules to separate code saves and production deploys
- Plan next steps for validation, email notifications, UX polish, and documentation

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "leave-app-v2",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,9 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/identity": "^4.10.2",
+    "@azure/msal-browser": "^4.14.0",
+    "@azure/msal-react": "^3.0.14",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@supabase/supabase-js": "^2.50.3",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "dotenv": "^17.0.1",
+    "express": "^5.1.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-datepicker": "^8.4.0",
+    "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -23,6 +34,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
+    "supabase": "^2.30.4",
     "vite": "^7.0.0"
   }
 }
