--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -64,3 +64,25 @@ entrypoint = "./functions/create-leave/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/create-leave/*.html" ]
+
+[functions.get-profile-photo]
+enabled = true
+verify_jwt = true
+import_map = "./functions/get-profile-photo/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/get-profile-photo/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/get-profile-photo/*.html" ]
+
+[functions.update-leave-balance]
+enabled = true
+verify_jwt = true
+import_map = "./functions/update-leave-balance/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/update-leave-balance/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/update-leave-balance/*.html" ]
