--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -86,3 +86,14 @@ entrypoint = "./functions/update-leave-balance/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/update-leave-balance/*.html" ]
+
+[functions.send-feedback]
+enabled = true
+verify_jwt = true
+import_map = "./functions/send-feedback/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/send-feedback/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/send-feedback/*.html" ]
