Commit Summary Add manager and role assignment features to AdminPanel, introduce users_logs table, and apply RLS
Added dropdowns in AdminPanel for assigning managers and roles to users (admin only)

Created assign-manager and assign-role Supabase Edge Functions with logging

Added users_logs table for auditing user changes (manager/role assignments) with detailed fields and timestamps

Updated AdminPanel to support and trigger manager/role assignments via Edge Functions

Implemented Row Level Security (RLS) for users_logs:

Only admins can insert logs (WITH CHECK)

Users can view logs where they are the target; admins can view all logs (USING)

Updates and deletes are forbidden for all users

Updated users fetch to include role and manager_email for new features

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -97,3 +97,25 @@ entrypoint = "./functions/send-feedback/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/send-feedback/*.html" ]
+
+[functions.assign-manager]
+enabled = true
+verify_jwt = true
+import_map = "./functions/assign-manager/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/assign-manager/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/assign-manager/*.html" ]
+
+[functions.assign-role]
+enabled = true
+verify_jwt = true
+import_map = "./functions/assign-role/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/assign-role/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/assign-role/*.html" ]
