--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.3",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
