--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -119,3 +119,14 @@ entrypoint = "./functions/assign-role/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/assign-role/*.html" ]
+
+[functions.update-user-info]
+enabled = true
+verify_jwt = true
+import_map = "./functions/update-user-info/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/update-user-info/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/update-user-info/*.html" ]
