--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -130,3 +130,14 @@ entrypoint = "./functions/update-user-info/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/update-user-info/*.html" ]
+
+[functions.backup-leave-balances]
+enabled = true
+verify_jwt = false
+import_map = "./functions/backup-leave-balances/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/backup-leave-balances/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/backup-leave-balances/*.html" ]
